--- a/templates/contacts/contact_list_vanilla.haml
+++ b/templates/contacts/contact_list_vanilla.haml
@@ -1,6 +1,5 @@
 -extends "vanilla/frame.html"
--load smartmin sms contacts temba
--load i18n humanize compress
+-load smartmin sms contacts temba i18n humanize compress
 
 -block extra-style
   {{block.super}}
