Connected configure flows functional.

--- a/templates/reports/report_analytics.haml
+++ b/templates/reports/report_analytics.haml
@@ -27,7 +27,8 @@
       createUpdateReport: "{% url 'reports.report_create' %}",
       loadChartsData: "{% url 'reports.report_charts_data' %}",
       deleteReport: "{% url 'reports.report_delete' %}",
-      refreshChartsData: "{% url 'reports.report_update_charts_data' %}"
+      refreshChartsData: "{% url 'reports.report_update_charts_data' %}",
+      configureFlows: "{% url 'reports.report_configure_flows' %}"
     };
     showAnalytics(document.querySelector("#analytics-container"), context);
 
