--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -174,6 +174,7 @@
       }
 
       function handleTicketsRefreshed(event) {
+        var menu = document.querySelector('temba-menu');
         var tickets = event.target;
 
         // tell our chat to refresh since we know things are new in our list
@@ -188,6 +189,8 @@
           chat.style.opacity = '0';
           empty.style.opacity = '1';
         }
+
+        menu.refresh();
       }
       
       function handleTicketUpdated(event) {
