Fix rendering of tickets on contact read page which now don't have subjects

--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -169,7 +169,7 @@
               %span.glyph.icon-ticket
           %td.details.w-full
             %a(href="{% url 'tickets.ticket_list' %}all/open/{{ticket.uuid}}/")
-              {{ ticket.subject }}
+              {{ ticket.body|default:"empty"|truncatechars:64 }}
           %td.created_on
             .pr-6
               {% short_datetime ticket.opened_on %}
