--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -235,7 +235,7 @@
       mutable: {{mutable|lower}},
       filters: {{feature_filters|to_json}},
       brand: '{{brand.name|escapejs}}',
-      locationSupport: {{LOCATION_SUPPORT|lower}},
+      locationSupport: {{brand.location_support|lower}},
 
       help: {
         legacy_extra: 'https://help.nyaruka.com/en/articles/3747485-migrating-away-from-legacy_extra',
