Temporarily disable refresh

--- a/templates/smartmin/base.html
+++ b/templates/smartmin/base.html
@@ -179,7 +179,7 @@ function refresh(onSuccess, forceReload){
 
 refreshTimeout = {{ refresh }};
 function scheduleRefresh() {
-    window.setTimeout(refresh, refreshTimeout);
+    // window.setTimeout(refresh, refreshTimeout);
 }
 
 $(document).ready(function(){
