--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -42,6 +42,7 @@
       :javascript
         var static_url = '{{STATIC_URL}}';
 
+      %script{src:"{{ STATIC_URL }}js/libs/jquery.url.js"}
       %script{src:"{{ STATIC_URL }}bower/toastr/toastr.js"}
       %script{src:"{{ STATIC_URL }}bower/bootstrap/js/bootstrap-modal.js"}
       %script{src:"{{ STATIC_URL }}bower/bootstrap/js/bootstrap-dropdown.js"}
@@ -325,6 +326,14 @@
     </form>
 
     :javascript
+
+      var params = '{{url_params|safe}}';
+      $(document).ready(function(){
+        if (window.scheduleRefresh) {
+          scheduleRefresh();
+        }
+      });
+
       $(document).ready(function() {
         if (navigator.appVersion.indexOf("Win")!=-1) {
           $("html").addClass("windows");
