Remove unused webhook result templates and tweak new httplog read template

--- a/templates/request_logs/httplog_webhooks.haml
+++ b/templates/request_logs/httplog_webhooks.haml
@@ -32,7 +32,7 @@
             %a(href='{% url "request_logs.httplog_read" obj.id %}')
               {{ obj.url|truncatechars:128 }}
           %td.clickable
-            %a(href='{% url "api.webhookresult_read" obj.pk %}')
+            %a(href='{% url "request_logs.httplog_read" obj.id %}')
               {{ obj.status_code }}
           %td
             -if obj.request_time
