removed duplicate text

--- a/templates/contacts/contactimport_create.haml
+++ b/templates/contacts/contactimport_create.haml
@@ -11,7 +11,7 @@
       You can import contacts from an Excel spreadsheet or comma separated values file.
     -if can_validate_upload
       -blocktrans trimmed
-        You can import contacts from an Excel spreadsheet or comma separated values file. Using the option at the end, you will have 2 groups, one containing Mobile and VOIP (contacts that you can reach using SMS) and one with landlines (contacts that you can only reach calling).
+        Using the option at the end, you will have 2 groups, one containing Mobile and VOIP (contacts that you can reach using SMS) and one with landlines (contacts that you can only reach calling).
 
         Contacts will also have new contact fields by default, Carrier Type(Mobile VOIP, Landline) and Carrier Name (T-Mobile, AT&T, Sprint…)
 
