--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -203,17 +203,17 @@
                               %th
                                 -if sort_field == field.key
                                   -if sort_direction == 'desc'
-                                    %a(href="?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
+                                    %a(href="{{request.path}}?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                                       %div
                                         {{ field.label }}
                                         %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                                   -else
-                                    %a(href="?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
+                                    %a(href="{{request.path}}?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                                       %div
                                         {{ field.label }}
                                         %span.sort.icon.icon-arrow-up51.sort-desc.visible
                                 -else
-                                  %a(href="?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
+                                  %a(href="{{request.path}}?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                                     %div
                                       {{ field.label }}
                                       %span.sort.icon.icon-arrow-down-2.sort-desc
@@ -221,17 +221,17 @@
                             - if object_list
                               -if sort_field == 'last_seen_on'
                                 -if sort_direction == 'desc'
-                                  %a(href="?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                  %a(href="{{request.path}}?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                                     %div
                                       -trans "Last Seen On"
                                       %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                                 -else
-                                  %a(href="?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                  %a(href="{{request.path}}?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                                     %div
                                       -trans "Last Seen On"
                                       %span.sort.icon.icon-arrow-up51.sort-desc.visible
                               -else
-                                %a(href="?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                %a(href="{{request.path}}?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                                   %div
                                     -trans "Last Seen On"
                                     %span.sort.icon.icon-arrow-down-2.sort-desc
@@ -240,24 +240,24 @@
                             -if object_list
                               -if sort_field == 'created_on'
                                 -if sort_direction == 'desc'
-                                  %a(href="?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                  %a(href="{{request.path}}?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}")
                                     %div
                                       -trans "Created On"
                                       %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                                 -else
-                                  %a(href="?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                  %a(href="{{request.path}}?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
                                     %div
                                       -trans "Created On"
                                       %span.sort.icon.icon-arrow-up51.sort-desc.visible
                               -else
-                                %a(href="?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                %a(href="{{request.path}}?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
                                   %div
                                     -trans "Created On"
                                     %span.sort.icon.icon-arrow-down-2.sort-desc
 
                     %tbody
                       -for object in contacts
-                        %tr.contact.select-row.object-row(data-uuid="{{object.uuid}}" data-object-id="{{object.id}}" onrowclick='handleRowClicked("{{object.uuid}}")')
+                        %tr.contact.select-row.object-row(onclick='handleRowClicked(event)' data-uuid="{{object.uuid}}" data-object-id="{{object.id}}")
 
                           -if org_perms.contacts.contact_update or org_perms.msgs.broadcast_send
                             %td.contact.checkbox.object-row-checkbox
@@ -273,7 +273,7 @@
 
                           -for field in contact_fields
                             -if field.show_in_table
-                              %td.field
+                              %td.field.truncate(style="max-width:240px")
                                 {{ object|contact_field:field.key }}
 
                           %td.value-received.field_received
@@ -366,6 +366,7 @@
       }
 
 
+
 -block extra-script
   {{ block.super }}
 
@@ -407,8 +408,20 @@
       
       {% endif %}
 
-      function handleRowClicked(uuid) {
+      function handleRowClicked(event) {
+
+        if (event.target.tagName == "TEMBA-CHECKBOX") {
+          return;
+        }
+
+        var row = event.target.closest("tr");
+        var uuid = row.getAttribute("data-uuid");
+
+        {% if is_spa %}
+        fetchURL("/contact/read/" + uuid + "/");
+        {% else %}
         gotoLink("/contact/read/" + uuid + "/");
+        {% endif %}
       }
 
       function handleSendMessageClicked() {
