--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -46,6 +46,79 @@
 
 -block read-buttons
 
+-block spa-script
+  :javascript
+    function handleFieldClicked(event) {
+      var endpoint = '{% url "contacts.contact_update_fields" object.pk %}';
+      var field_id = event.target.closest('.contact-field').getAttribute("data-id");
+      var modax = document.querySelector("#gear-modax");
+      modax.header = '{{_("Update Field")|escapejs}}';
+      modax.endpoint = endpoint + '?field=' + field_id;
+      modax.open = true;
+    }
+
+    function handleDetailsToggled() {
+      console.log("clicked!");
+
+      var summary = document.querySelector(".details .summary");
+      var expanded = document.querySelector(".details .expanded");
+      var icon = document.querySelector(".details temba-icon");
+      
+      if (summary.classList.contains("hidden")) {
+        summary.classList.remove("hidden");
+        expanded.classList.add("hidden");
+        icon.name = "chevrons-down"
+
+      } else {
+        summary.classList.add("hidden");
+        expanded.classList.remove("hidden");
+        icon.name = "chevrons-up";
+      }
+    }
+
+-block spa-style
+  :css
+    temba-contact-history {
+      background: #fff;
+    }
+
+    .history-wrapper {
+      display: flex;
+      flex-grow:1;
+      flex-direction: column;
+      background: #fff;
+      overflow:hidden;
+      border-radius: var(--curvature);
+      -webkit-mask-image: -webkit-radial-gradient(white, black);
+    }
+
+    .outer-shadow {
+      border-radius: var(--curvature);
+      display: flex;
+      flex-grow:1;
+    }
+
+    .details:hover temba-icon {
+      opacity:1;
+      transform: scale(1);
+    }
+
+    .details temba-icon {
+      opacity:0;
+      transition: all 100ms ease-in-out;
+      transition-delay: 400ms;
+      transform: scale(.3);
+      cursor: pointer;
+    }
+
+    .summary {
+
+    }
+
+-block spa-body  
+  .flex.flex-col(style="height:100%")
+    %temba-contact-chat(contact="{{object.uuid}}" monitor="true")
+
 -block content
 
   // Needed for table wrapping on IE 9
@@ -54,7 +127,6 @@
     table.activity { table-layout: fixed; }
   </style>
   <![endif]-->
-
 
   -if all_contact_fields.0.show_in_table
     .bg-gray-100.rounded-lg.p-3.mb-6
@@ -571,6 +643,8 @@
       // reset our modal
       window.setTimeout(function(){ modax.endpoint = endpoint;}, 1000);
     });
+    
+
 
     {% endif %}
 
