--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -1,4 +1,4 @@
--extends "smartmin/list.html"
+-extends "frame.haml"
 -load smartmin i18n contacts compress
 
 -block page-top
@@ -18,6 +18,11 @@
 
       --button-y: 0.39em;
       --button-x: 1.5em;
+      
+      --temba-select-selected-font-size: 1em;
+      --temba-select-selected-padding: .6em .8em;
+      --temba-select-selected-line-height: 1.2em;
+
     }
 
     temba-button {
@@ -55,8 +60,13 @@
 
     .spa-content {
       height:100%;
-
     }
+
+    .bg-gradient {
+      background-repeat: no-repeat;
+      background-image: linear-gradient(rgb(255, 255, 255) 0%, rgb(236, 236, 236) 75%);
+    }
+
 
     .lp-frame .lp-nav-item {
       padding: 5px 10px !important;
@@ -107,6 +117,7 @@
       transition: all 200ms ease-in-out;
       transition-delay: 200ms;
     }
+
 
     .empty {
       position: absolute;
@@ -188,9 +199,135 @@
       -webkit-box-shadow:  inset 14px -10px 10px -20px #000000;
       box-shadow: inset 14px -10px 10px -20px #000000;
     }
+
+    table.list.selectable tbody tr:hover td {
+      background-color: var(--color-row-hover);
+      cursor: pointer;
+    }
+
+    .page-title {
+      font-size: 1.5em;
+    }
+
+    temba-menu {
+      background: #fff;
+    }
     
+    .lbl-group {
+      background: #fff;
+    }
+
+    .lbl-group:hover {
+      background: #f3f3f3;
+    }
+     
 -block full-page-script
   %script{src:"{{ STATIC_URL }}js/labels.js?4"}
+
+  :javascript
+    function fetchPJAXContent(url, container, options) {
+
+      options = options || {};
+
+      // hijack any pjax requests made from spa pages and route the content there instead
+      if (container == "#pjax" && document.querySelector(".spa-content")) {
+        container = ".spa-content";
+        options["headers"] = (options["headers"] || {})
+        options["headers"]["TEMBA-SPA"] = 1;
+      }
+
+      var triggerEvents = true;
+      if (!!options["ignoreEvents"]) {
+        triggerEvents = false;
+      }
+
+      var type = 'GET';
+      var data = undefined;
+      var processData = true;
+      var contentType = 'application/x-www-form-urlencoded; charset=UTF-8';
+
+      if (options) {
+        if ('postData' in options) {
+          type = 'POST';
+          data = options['postData'];
+        }
+        
+        if('formData' in options) {
+          type = 'POST';
+          processData = false;
+          data = options['formData'];
+          contentType = false;
+        }
+      }
+
+      var headers = { 'X-PJAX': true };
+      if (options && 'headers' in options) {
+        for (key in options['headers']) {
+          headers[key] = options['headers'][key];
+        }
+      }
+
+      if (triggerEvents) {
+        document.dispatchEvent(new Event("temba-pjax-begin"));
+      }
+
+      // see if we should skip our fetch
+      if (options) {
+        if ('shouldIgnore' in options && options['shouldIgnore']()) {
+          if ('onIgnore' in options) {
+            options['onIgnore']();
+          }
+          return;
+        }
+      }
+
+      const request = {
+        headers: headers,
+        type: type,
+        url: url,
+        contentType: contentType,
+        processData: processData,
+        data: data,
+        success: function(response, status, jqXHR) {
+          var toast = jqXHR.getResponseHeader('Temba-Toast');
+          if (toast) {
+            toastr.info(toast, '', {"positionClass": "toast-bottom-full-width"});
+          }
+
+          if ('followRedirects' in options && options['followRedirects'] == true) {
+              var redirect = jqXHR.getResponseHeader('REDIRECT');
+              if (redirect) {
+                  window.document.location.href = redirect;
+                  return;
+              }
+          }
+
+          // double check before replacing content
+          if (options) {
+            if (('shouldIgnore' in options && options['shouldIgnore'](response))) {
+              if ('onIgnore' in options) {
+                  options['onIgnore'](jqXHR);
+              }
+
+              return;
+            }
+          }
+
+          $(container).html(response);
+
+          if (triggerEvents) {
+            document.dispatchEvent(new Event("temba-pjax-complete"));
+          }
+
+          if (options) {
+            if ('onSuccess' in options) {
+              options['onSuccess']();
+            }
+          }
+        }
+      }
+      $.ajax(request);
+    }
 
   :javascript
     document.addEventListener("temba-redirected", function(event){
@@ -258,7 +395,15 @@
       let state = event.state;
       if (state) {
         showLoading();
-        fetchPJAXContent(state.url, ".spa-content", {});
+
+        fetchPJAXContent(state.url, ".spa-content", { "headers": { 
+          "TEMBA-SPA": "1", 
+          "TEMBA-REFERER-PATH": state.path,
+          "TEMBA-PATH": state.path
+          }, 
+        "onSuccess": hideLoading, "ignoreEvents": false
+        });
+
       }
     });
 
@@ -320,7 +465,7 @@
       window.lastFetch = url;
       var menu = document.querySelector("temba-menu");
       var path = "/" + menu.getSelection().join("/") + "/";
-      window.history.pushState({ url: path },"", path);
+      window.history.pushState({ url: url,  },"", path);
 
       fetchPJAXContent(url, ".spa-content", { "headers": { 
           "TEMBA-SPA": "1", 
@@ -365,7 +510,7 @@
   .flex-col
     .flex.widget-container(style="height:100vh;")
       .folders       
-        %temba-menu(style="height:100%" endpoint="{% url 'orgs.org_menu' %}" onchange="handleMenuChanged(event)")
+        %temba-menu(style="height:100%" endpoint="{% url 'orgs.org_menu' %}" onchange="handleMenuChanged(event)" wait="true")
       .flex-grow.text-lg.spa-container.p-5
         .spa-content
   
