--- a/templates/contacts/contactimport_create.haml
+++ b/templates/contacts/contactimport_create.haml
@@ -105,7 +105,6 @@
             class="fa fa-info-circle"
             data-toggle="popover"
             title="Import verified contact"
-            data-content="<p>By checking this box you will the list of contacts against Twilo’s Lookup API to verify whether contacts are mobile/VOIP or Landlines.</p> <p>At the end of this process, you will have a group for each type.</p><p> For inactive contacts or we are not able to identify carrier or phone type, we will not import them into the platform.</p> <p>For Mobile/VOIP  type contacts, we will create groups of 50k contacts. For Landlines, we will create groups of 10k contacts</p>"
           )
 
         .mt-4.mb-6.text-error
@@ -126,13 +125,23 @@
   {{ block.super }}
   %script(src='{% static "bower/bootstrap/js/bootstrap-popover.js" %}')
   :javascript
-    $('#validate-upload-tooltip').popover({ html: true, trigger: 'hover' })
+    $('#validate-upload-tooltip').popover({ html: true, trigger: 'hover', content: getTooltipContent() })
     function onFileChange() {
       var file = $('#import-file').val();
       while (file.indexOf('\\') >= 0) {
         file = file.substring(file.indexOf('\\') + 1, file.length);
       }
       $('#file-field').val(file);
+    }
+
+    function getTooltipContent() {
+      let content = "<p>By checking this box you will run the list of contacts against Twilio's Lookup API to verify whether contacts are Mobile/VOIP or Landlines.</p>";
+      content += "<p>At the end of this process, you will have a group for each phone type.</p><br>";
+      content += "<p>For contacts who we are not active or who we are not able to identify carrier or phone type, we will not import them onto the platform.</p><br>";
+      content += "<p>For Mobile/VOIP type contacts, we will create groups of 50k contacts.</p><br>";
+      content += "<p>For Landlines, we will create groups of 10k contacts.</p>";
+
+      return content;
     }
 
 
