--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -1,9 +1,14 @@
--block spa-style
--block spa-script
--block spa-body
-  -if user_org.is_suspended
-    -include "org_suspended_include.haml"
-  -if is_spa and messages
-    -for msg in messages
-      %temba-alert.mb-3
-        {{ msg }}
+-block extra-style
+-block extra-less
+-block extra-script
+
+-include "org_suspended_include.haml"
+
+-if user_org.is_suspended
+  -include "org_suspended_include.haml"
+-if is_spa and messages
+  -for msg in messages
+    %temba-alert.mb-3
+      {{ msg }}
+
+-block content
