--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -59,6 +59,8 @@
     }
 
     .spa-content {
+      display: flex;
+      flex-direction: column;
       height:100%;
     }
 
@@ -84,7 +86,8 @@
       padding-top:0em;
       padding-right: 0em;
       padding-left: 0em;
-      height: 100%;      
+      flex-grow: 1;
+      overflow-y: auto;
     }
 
     .lp-frame .left { 
@@ -99,8 +102,8 @@
     }
 
     .lp-frame .right { 
-      padding: 1em;
-      margin: -1em;
+      padding: 0em;
+      margin: 0em;
     }
 
     .lp-frame .left .lp-nav .inner-scroll {
