Add messages to menu, refresh override

--- a/templates/channels/channellog_log.haml
+++ b/templates/channels/channellog_log.haml
@@ -10,7 +10,8 @@
       %td
         .font-normal.inline.mr-1
           %span.method= log.method
-        {% channellog_url log %}
+        .break-all(style="min-width:200px")
+          {% channellog_url log %}
 
       %td
         .text-right.whitespace-nowrap
