--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -102,22 +102,22 @@
                           -trans "Remove Label"
 
                       - if 'archive' in actions
-                        .button-action.object-btn-archive
+                        .button-action(onclick='runActionOnObjectRows("archive")')
                           .-mt-1.mr-2.glyph.icon-box
                           -trans "Archive"
 
                       - if 'restore' in actions
-                        .button-action.object-btn-restore
+                        .button-action(onclick='runActionOnObjectRows("restore")')
                           .-mt-1.mr-2.glyph.icon-download
                           -trans "Restore"
 
                       - if 'delete' in actions
-                        .button-action.object-btn-delete
+                        .button-action(onclick='onDeleteClicked()')
                           .-mt-1.mr-2.glyph.icon-remove
                           -trans "Delete"
 
                       - if 'resend' in actions
-                        .button-action.object-btn-resend
+                        .button-action(onclick='runActionOnObjectRows("resend")')
                           .mt-1.mr-2.glyph.icon-loop.text-sm
                           -trans "Resend"
 
@@ -131,7 +131,7 @@
                             -for node in labels
                               -if node.obj.is_folder and node.children
                                 %li.dropdown-submenu
-                                  .lbl-menu.object-btn-label.cursor-pointer{data-id:'{{node.obj.id}}'}
+                                  .lbl-menu.cursor-pointer(href='#' onclick='labelObjectRows({{node.obj.id}})' data-id='{{node.obj.id}}')
                                     .flex.items-center.py-1.hover-linked
                                       .icon-arrow-right-8.text-2xl.-ml-1.-mt-1.mr-1
                                       .name.px-2
@@ -139,7 +139,7 @@
                                   %ul.dropdown-menu.label-menu.border-none
                                     - for child in node.children
                                       %li
-                                        .lbl-menu.object-btn-label.px-4{data-id:'{{child.obj.id}}'}
+                                        .lbl-menu.object-btn-label.px-4(href='#' onclick='labelObjectRows({{child.obj.id}})' data-id='{{child.obj.id}}')
                                           .flex.items-center.py-1.hover-linked
                                             .glyph.message-label.label-checkbox
                                             .name.px-1
@@ -147,7 +147,7 @@
                             -for node in labels
                               -if not node.obj.is_folder
                                 %li
-                                  .lbl-menu.object-btn-label{data-id:'{{node.obj.id}}'}
+                                  .lbl-menu(href='#' onclick='labelObjectRows({{node.obj.id}})' data-id='{{node.obj.id}}')
                                     .flex.items-center.py-1.hover-linked
                                       .glyph.message-label.label-checkbox
                                       .name.px-1
@@ -174,7 +174,7 @@
                 %tbody
                   -for object in object_list
                     %tr.sms.object-row{id: 'id-row-{{object.id}}', data-object-id:'{{ object.id }}',
-                                  data-sender-id:'{{object.contact.id}}', data-sender-uuid:'{{object.contact.uuid}}', onrowclick:'handleRowClick("{{object.contact.uuid}}")'}
+                                  data-sender-id:'{{object.contact.id}}', data-sender-uuid:'{{object.contact.uuid}}', onclick:'handleRowClicked(event)'}
                       -if actions
                         - if org_perms.msgs.msg_update or org_perms.msgs.broadcast_send
                           %td.checkbox.sms.object-row-check
@@ -211,40 +211,40 @@
                       %td{ colspan:'99' }
                         -trans "No messages"
 
-              - block paginator
-                -if object_list.count
-                  -block search-details
-                    .flex.mx-4.mt-3.mb-16
-                      .text-gray-700
-                        -if not paginator or paginator.num_pages <= 1                        
-                          -if search
+            - block paginator
+              -if object_list.count
+                -block search-details
+                  .flex.m-4
+                    .text-gray-700
+                      -if not paginator or paginator.num_pages <= 1                        
+                        -if search
+                          -blocktrans trimmed with results_count=paginator.count|intcomma count cc=paginator.count
+                            Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
+                            -plural
+                              Found {{ results_count }} messages in last 90 days matching <i>{{search}}</i>.
+                        -else
+                          -if start_date
                             -blocktrans trimmed with results_count=paginator.count|intcomma count cc=paginator.count
-                              Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
+                              {{ results_count }} message since {{ start_date}}.
                               -plural
-                                Found {{ results_count }} messages in last 90 days matching <i>{{search}}</i>.
-                          -else
-                            -if start_date
-                              -blocktrans trimmed with results_count=paginator.count|intcomma count cc=paginator.count
-                                {{ results_count }} message since {{ start_date}}.
-                                -plural
-                                  {{ results_count }} messages since {{ start_date}}.
+                                {{ results_count }} messages since {{ start_date}}.
 
-                        - else
+                      - else
 
-                          -if search
+                        -if search
+                          -blocktrans trimmed with results_count=paginator.count|intcomma start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma count cc=paginator.count 
+                            Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
+                            -plural
+                              {{ start }} - {{ end }} of {{ results_count }} results for <i>{{search}}</i> since {{start_date}}.
+                        -else
+                          -if start_date
                             -blocktrans trimmed with results_count=paginator.count|intcomma start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma count cc=paginator.count 
-                              Found {{ results_count }} message in last 90 days matching <i>{{search}}</i>.
+                              {{ results_count }} message since {{ start_date}}.
                               -plural
-                                {{ start }} - {{ end }} of {{ results_count }} results for <i>{{search}}</i> since {{start_date}}.
-                          -else
-                            -if start_date
-                              -blocktrans trimmed with results_count=paginator.count|intcomma start=page_obj.start_index|intcomma end=page_obj.end_index|intcomma count cc=paginator.count 
-                                {{ results_count }} message since {{ start_date}}.
-                                -plural
-                                  {{ start }} - {{ end }} of {{ results_count }} messages since {{ start_date}}.
-                                    
-                      .flex-grow
-                        -include "includes/pages.html"
+                                {{ start }} - {{ end }} of {{ results_count }} messages since {{ start_date}}.
+                                  
+                    .flex-grow
+                      -include "includes/pages.html"
         -else
           -include "msgs/empty_include.html"
 
@@ -252,8 +252,20 @@
   {{ block.super }}
   :javascript
 
-    function handleRowClick(uuid) {
+    function handleRowClicked(event) {
+
+      if (event.target.tagName == "TEMBA-CHECKBOX") {
+        return;
+      }
+
+      var row = event.target.closest("tr");
+      var uuid = row.getAttribute("data-sender-uuid");
+
+      {% if is_spa %}
+      fetchURL("/contact/read/" + uuid + "/");
+      {% else %}
       gotoLink("/contact/read/" + uuid + "/");
+      {% endif %}
     }
 
     {% if org_perms.msgs.msg_update %}
