--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -199,8 +199,11 @@
     }
 
     .spa-container {
-      -webkit-box-shadow:  inset 14px -10px 10px -20px #000000;
-      box-shadow: inset 14px -10px 10px -20px #000000;
+    }
+
+    .folders {
+      box-shadow: 3px 0 13px -3px rgba(0, 0, 0, 0.15);
+      z-index:1;
     }
 
     table.list.selectable tbody tr:hover td {
