--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -33,13 +33,13 @@
   }
 
   .dropdown-menu {
-    padding: 1em 1.5em;
+    padding: .9em 1.25em;
     padding-bottom: 0.6em;
   }
 
   .menu-item {
     margin-bottom: 0.4em;
-    font-size: 1.175rem;
+    font-size: 0.9rem;
   }
 
 :javascript
