--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -2,14 +2,13 @@
 -block extra-less
 -block extra-script
 
--include "org_suspended_include.haml"
-
--if user_org.is_suspended
-  -include "org_suspended_include.haml"
--if is_spa and messages
-  -for msg in messages
-    %temba-alert.mb-3
-      {{ msg }}
+-block alert-messages
+  -if user_org.is_suspended
+    -include "org_suspended_include.haml"
+  -if messages
+    -for msg in messages
+      %temba-alert.mb-3
+        {{ msg }}
 
 -block page-container
   -block content
