--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -219,12 +219,9 @@
       background: #fff;
     }
     
-    .lbl-group {
-      background: #fff;
-    }
-
-    .lbl-group:hover {
-      background: #f3f3f3;
+    .formax .formax-section.open {
+      margin-left: 0 !important;
+      margin-right: 0 !important;
     }
      
 -block full-page-script
